turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: ']' expected but '(' found.
var T = new Array[Array[Int](2)]
                            ^Turmite:16: error: ']' expected but '(' found.
var U = new Array[Array[Int](2)]
                            ^